(lang dune 3.13)

(name redito)

(generate_opam_files true)

(source
 (github molvrr/redito))

(authors "Mateus Cruz")

(maintainers "Mateus Cruz")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name redito)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
